# mdrc-pacbot-rl

./: .gitignore  README.md  graph_embedding.ipynb  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: lint.yaml  test.yaml
mdrc_pacbot_rl/: eval.py  micro_envs.py  utils.py
mdrc_pacbot_rl/algorithms/: ppo.py  replay_buffer.py  rollout_buffer.py  self_attention.py
mdrc_pacbot_rl/experiments/: baseline_dqn.py  baseline_ppo.py  baseline_self_attention_dqn.py  baseline_self_attention_ppo.py  collect_and_run_ppo.py  collect_and_run_self_attn_ppo.py  collect_pellets_ppo.py  collect_pellets_self_attn_ppo.py  coordconv_ppo.py  pacman_zero.py  pretrained_ppo.py  random_actions.py  run_away_ppo.py  run_away_self_attn_ppo.py  semantic_channels_ppo.py  single_ghost_ppo.py  target_loc_ppo.py  test.py  test_pbt.py  test_ppo.py
mdrc_pacbot_rl/pacman/: gameState.py  ghostAgent.py  ghostpaths.py  grid.py  gym.py  pacbot.py  semantic_channel_gym.py  variables.py
pacbot_rs/: Cargo.toml  build.rs  pacbot_rs.pyi
pacbot_rs/.github/workflows/: CI.yml
pacbot_rs/src/: game_state.rs  ghost_agent.rs  ghost_paths.rs  grid.rs  grid_data.txt  heuristic_values.rs  lib.rs  mcts.rs  pacbot.rs  particle_filter.rs  variables.rs
pacbot_rs/src/game_state/: env.rs  mod.rs  py_wrappers.rs
tests/: test_gym.py
