[tool.poetry]
name = "mdrc-pacbot-rl"
version = "0.1.0"
description = ""
authors = ["Ben Giacalone <bensgiacalone@gmail.com>"]
readme = "README.md"
packages = [{include = "mdrc_pacbot_rl"}]

[tool.poetry.dependencies]
python = "^3.9"
ray = {extras = ["rllib"], version = "^2.2.0"}
torch = "^1.13.1"
pygame = "^2.1.3"
numpy = "~1.23.5"
matplotlib = "^3.7.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
