[tool.poetry]
name = "mdrc-pacbot-rl"
version = "0.1.0"
description = ""
authors = ["Ben Giacalone <bensgiacalone@gmail.com>"]
readme = "README.md"
packages = [{include = "mdrc_pacbot_rl"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
pygame = "^2.1.3"
numpy = "~1.23.0"
matplotlib = "^3.7.0"
pytest = "^7.2.1"
gymnasium = "^0.27.1"
tqdm = "^4.64.1"
envpool = "^0.8.1"
types-tqdm = "^4.65.0.0"
ray = {extras = ["tune"], version = "^2.3.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
